code refractor and frontend logic

--- a/client/src/Pages/note.css
+++ b/client/src/Pages/note.css
@@ -10,33 +10,15 @@
     justify-content: center;
     align-items: center;
 }
-form{
-    width:40%;
-    height:80%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-}
+
 .text_container{
    display: flex;
    flex-direction: column;
    gap: 8px;
    width: 100%;
 }
-textarea{
-    height: 150px;
-    border-radius: 5px;
-    padding:4px;
-    
-}
-input{
-    height:40px;
-    border-radius: 5px;
-    border: none;
-    padding: 4px;
 
-}
+
 .button_container{
     display: flex;
     justify-content: end;
@@ -46,17 +28,21 @@ input{
     
     
 }
-button{
-    width:100px;
-    cursor: pointer;
+.list{
+    background-color: cornflowerblue;
+    max-width:20%;
+    height:fit-content;
+    padding: 2%;
     border-radius: 5px;
-    border: none;
+    
+}
+.list h3{
+    color: crimson;
+}
+.list_note{
+    display: flex;
+    gap: 8px;
+    flex-wrap: wrap;
+    padding: 8px;
+}
 
-   
-}
-input:focus,textarea:focus{
-    outline: none;
-}
-button:hover{
-    background-color: cadetblue;
-}
